# diploma-benchs

./: CMakeLists.txt  main.cpp  mtf.h  opt.h
include/cli11/: CLI11.hpp
mtf/: CMakeLists.txt  pyproject.toml
mtf/include/mtf/: lazy_mtf.h
scripts/: generate_plots.py
splay/: pom.xml
splay/scripts/: process_net.py  pyproject.toml
splay/src/main/java/: NetMain.java  TreeMain.java
splay/src/main/java/structure/: LazySplayNet.java  LazySplayTree.java  SplayNet.java  SplayTree.java
src/mtf/: main.cpp
